Creación del login para el vendedor. Ruta para que el vendedor pueda hacer el login según rol. Pruebas unitarias del back atendiendo petición por parte del vendedor.

--- a/UI/apps/mobile/src/app/login/menu-login/menu-login.component.html
+++ b/UI/apps/mobile/src/app/login/menu-login/menu-login.component.html
@@ -14,6 +14,7 @@
         mat-raised-button
         color="primary"
         data-testid="boton-vendedor"
+        routerLink="vendedor"
         i18n="login.vendedor"
       >
         Vendedor <mat-icon iconPositionEnd>keyboard_arrow_right</mat-icon>
