--- a/UI/apps/mobile/src/app/shared/login/login.component.html
+++ b/UI/apps/mobile/src/app/shared/login/login.component.html
@@ -5,7 +5,7 @@
     >
       <img width="105" height="104" src="assets/images/mundo.svg" />
       <div>
-        <h1 i18n="login.cliente" class="color-primary">Cliente</h1>
+        <h1 class="color-primary">{{ titulo }}</h1>
         <p i18n="login.descripcion" class="color-on-surface">
           Ingresa tus datos para acceder a tu información.
         </p>
