Adaptación del login de usuarios Web de usuarios mobile

--- a/UI/libs/design-system/src/lib/styles/_main.scss
+++ b/UI/libs/design-system/src/lib/styles/_main.scss
@@ -3,3 +3,4 @@
 @import './clases-componentes.scss';
 @import './size-icons.scss';
 @import './configuracion-componentes.scss';
+@import './clases-colores.scss';
