--- a/UI/libs/design-system/src/lib/styles/clases-colores.scss
+++ b/UI/libs/design-system/src/lib/styles/clases-colores.scss
@@ -7,6 +7,10 @@
   color: map-get($primary, 800);
 }
 
+.color-warn {
+  color: map-get($warn, 800);
+}
+
 .color-on-surface {
   color: #1d1b20;
 }
