--- a/UI/libs/design-system/src/lib/styles/colores.scss
+++ b/UI/libs/design-system/src/lib/styles/colores.scss
@@ -188,4 +188,5 @@ $variant-colors: (
 
 :root {
   --mat-toolbar-container-background-color: #ffffff;
+  --mdc-protected-button-disabled-label-text-color: #ffffff;
 }
