--- a/UI/libs/design-system/src/lib/styles/clases-componentes.scss
+++ b/UI/libs/design-system/src/lib/styles/clases-componentes.scss
@@ -11,7 +11,6 @@
   background-color: #ffffff;
 }
 
-.contenido-mobile {
-  padding-top: calc(56px + env(safe-area-inset-top));
-  height: calc(100% - (env(safe-area-inset-top) + env(safe-area-inset-bottom)));
+.sombra-card {
+  --mdc-elevated-card-container-elevation: 0px 4px 4px 0px #0000000d;
 }
