--- a/UI/apps/web/src/app/login/admin-shell/admin-shell.component.html
+++ b/UI/apps/web/src/app/login/admin-shell/admin-shell.component.html
@@ -8,7 +8,7 @@
           <div>
             <h2 class="color-primary" i18n="login.bienvenido">Bienvenido</h2>
             <p class="color-on-surface" i18n="login.descripcion">
-              Ingresa tu información para acceder.
+              Ingresa tus datos para acceder a tu información.
             </p>
           </div>
           <div
