Creación del formulario de registro del fabricante

--- a/UI/libs/design-system/src/lib/styles/clases-componentes.scss
+++ b/UI/libs/design-system/src/lib/styles/clases-componentes.scss
@@ -14,3 +14,7 @@
 .sombra-card {
   --mdc-elevated-card-container-elevation: 0px 4px 4px 0px #0000000d;
 }
+
+.sin-sombra-card {
+  --mdc-elevated-card-container-elevation: 0px 0px 0px #0000000d;
+}
