--- a/UI/apps/mobile/src/app/shared/login/login.component.html
+++ b/UI/apps/mobile/src/app/shared/login/login.component.html
@@ -5,7 +5,7 @@
     >
       <img width="105" height="104" src="assets/images/mundo.svg" />
       <div>
-        <h1 class="color-primary">{{ titulo }}</h1>
+        <h1 class="color-primary">{{ configuracion.titulo }}</h1>
         <p i18n="login.descripcion" class="color-on-surface">
           Ingresa tus datos para acceder a tu información.
         </p>
@@ -68,6 +68,7 @@
         i18n="login.registrate"
         mat-button
         color="warn"
+        [routerLink]="configuracion.ruta"
       >
         Registrate aquí
       </button>
