--- a/UI/libs/design-system/src/lib/styles/configuracion-componentes.scss
+++ b/UI/libs/design-system/src/lib/styles/configuracion-componentes.scss
@@ -7,6 +7,11 @@
   justify-content: center;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+}
+
 :root {
   --mat-toolbar-title-text-size: 14px;
   --mat-toolbar-title-text-weight: 500;
