--- a/UI/libs/design-system/src/lib/styles/espacios.scss
+++ b/UI/libs/design-system/src/lib/styles/espacios.scss
@@ -8,9 +8,16 @@
 .gap-16 {
   gap: 16px;
 }
+.gap-17 {
+  gap: 17px;
+}
 
 .gap-8 {
   gap: 8px;
+}
+
+.gap-13 {
+  gap: 13px;
 }
 
 .gap-9 {
@@ -28,6 +35,10 @@
   gap: 24px;
 }
 
+.gap-2 {
+  gap: 2px;
+}
+
 //Paddins
 .p-16 {
   padding: 16px;
@@ -43,4 +54,12 @@
 
 .py-8 {
   padding-block: 8px;
+}
+
+.pt-12 {
+  padding-top: 12px;
+}
+
+.mt-8 {
+  margin-top: 8px;
 }
