--- a/UI/libs/design-system/src/lib/styles/configuracion-componentes.scss
+++ b/UI/libs/design-system/src/lib/styles/configuracion-componentes.scss
@@ -1,6 +1,12 @@
+@import './colores.scss';
 .mat-mdc-form-field-subscript-wrapper {
   display: none;
 }
+
+.mdc-list {
+  padding: 0px !important;
+}
+
 .mat-icon {
   display: flex !important;
   align-items: center;
@@ -17,4 +23,14 @@ input::-webkit-inner-spin-button {
   --mat-toolbar-title-text-weight: 500;
   --mat-toolbar-title-text-line-height: 150%;
   --mat-toolbar-title-text-letter-spacing: 1px;
+}
+
+.mat-mdc-tab-group.mat-mdc-tab-group-stretch-tabs
+  > .mat-mdc-tab-header
+  .mat-mdc-tab {
+  flex: 1 !important;
+}
+
+.mat-mdc-tab-links {
+  border-bottom: 2px solid map-get($grey, 300);
 }
