Registro masivo de productos

--- a/UI/apps/web/src/app/productos/registrar-productos/registrar-productos.component.html
+++ b/UI/apps/web/src/app/productos/registrar-productos/registrar-productos.component.html
@@ -73,7 +73,8 @@
         i18n="producto.registrarProducto.registrarMasivo"
         mat-stroked-button
         color="primary"
-        data-testid="boton-registrar-producto-masivo"
+        data-testid="boton-registrar-productos-masivo"
+        (click)="abrirModalRegistrarMasivo()"
       >
         Registrar masivo
       </button>
