--- a/UI/libs/design-system/src/lib/styles/espacios.scss
+++ b/UI/libs/design-system/src/lib/styles/espacios.scss
@@ -39,9 +39,17 @@
   gap: 2px;
 }
 
+.gap-10 {
+  gap: 10px;
+}
+
 //Paddins
 .p-16 {
   padding: 16px;
+}
+
+.p-10 {
+  padding: 10px;
 }
 
 .p-12 {
