--- a/UI/libs/design-system/src/lib/styles/layout.scss
+++ b/UI/libs/design-system/src/lib/styles/layout.scss
@@ -74,3 +74,11 @@
 .radius-4 {
   border-radius: 4px;
 }
+
+.d-grid {
+  display: grid;
+}
+
+.grid-template-columns-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
