feat(api): actualizar manejo de carga de archivos y endpoints del API
- Se modificó 'ComprasEndpoints' para usar 'FirstOrDefault()' en la obtención del archivo.
- Se actualizaron las URLs de carga masiva de productos en 'productos.urls.ts' para reflejar la nueva estructura del API.
- Se cambiaron los tipos de archivo aceptados en 'registrar-productos-masivo.component.html' de Excel a CSV y se actualizó el atributo name del input.

--- a/UI/apps/web/src/app/productos/registrar-productos-masivo/registrar-productos-masivo.component.html
+++ b/UI/apps/web/src/app/productos/registrar-productos-masivo/registrar-productos-masivo.component.html
@@ -41,9 +41,9 @@
               <input
                 type="file"
                 (change)="adjuntarArchivo($event)"
-                accept=".xlsx,.xls"
+                accept=".csv,text/csv"
                 data-testid="producto-cargar-masivo"
-                name="subirArchivo"
+                name="archivo"
                 id="subirArchivo"
               />
             </label>
