--- a/UI/libs/design-system/src/lib/styles/layout.scss
+++ b/UI/libs/design-system/src/lib/styles/layout.scss
@@ -32,6 +32,10 @@
   align-items: center;
 }
 
+.align-items-end {
+  align-items: flex-end;
+}
+
 .justify-content-between {
   justify-content: space-between;
 }
