Front de creación de pedidos del vendedor

--- a/UI/apps/mobile/src/app/clientes/consultar-pedido/consultar-pedido.component.html
+++ b/UI/apps/mobile/src/app/clientes/consultar-pedido/consultar-pedido.component.html
@@ -4,7 +4,7 @@
     [descripcion]="descripcion"
   ></app-card-informacion>
   <div class="row justify-content-end">
-    <mat-form-field class="width-240" appearance="outline" class="bg-white">
+    <mat-form-field appearance="outline" class="bg-white width-240">
       <input
         i18n-placeholder="pedido.buscarPedido"
         placeholder="Buscar pedido "
