--- a/UI/apps/web/src/app/informes/formulario-consulta-informes/formulario-consulta-informes.component.html
+++ b/UI/apps/web/src/app/informes/formulario-consulta-informes/formulario-consulta-informes.component.html
@@ -55,8 +55,8 @@
         data-testid="select-informes-producto"
         formControlName="producto"
       >
-        @for (producto of productos(); track producto.id) {
-          <mat-option [value]="producto.id">
+        @for (producto of productos(); track producto.codigo) {
+          <mat-option [value]="producto.codigo">
             {{ producto.nombre }}
           </mat-option>
         }
