--- a/UI/libs/design-system/src/lib/styles/_main.scss
+++ b/UI/libs/design-system/src/lib/styles/_main.scss
@@ -4,3 +4,4 @@
 @import './size-icons.scss';
 @import './configuracion-componentes.scss';
 @import './clases-colores.scss';
+@import './clases-globales.scss';
