--- a/UI/apps/mobile/src/app/shared/productos/productos.component.scss
+++ b/UI/apps/mobile/src/app/shared/productos/productos.component.scss
@@ -1,7 +1,3 @@
-.width-240 {
-  width: 240px;
-}
-
 mat-list-item {
   border-bottom: 1px solid #ededed;
 }
@@ -29,4 +25,8 @@ mat-list-item {
 }
 .pb-46 {
   padding-bottom: 46px;
+}
+
+.white-space-normal {
+  white-space: initial;
 }
