--- a/UI/apps/mobile/src/app/vendedores/clientes/clientes.component.html
+++ b/UI/apps/mobile/src/app/vendedores/clientes/clientes.component.html
@@ -1,1 +1,49 @@
-<p>clientes works!</p>
+<div class="p-16 column gap-8">
+  <app-card-informacion
+    [titulo]="titulo"
+    [descripcion]="descripcion"
+  ></app-card-informacion>
+  <div class="row justify-content-end">
+    <mat-form-field class="width-240" appearance="outline" class="bg-white">
+      <input
+        i18n-placeholder="clientes.buscarcliente"
+        placeholder="Buscar cliente"
+        [formControl]="controlBuscar"
+        type="text"
+        matInput
+        data-testid="input-buscar-cliente"
+      />
+      <mat-icon matSuffix class="color-grey-500">search</mat-icon>
+    </mat-form-field>
+  </div>
+  <div class="column gap-8">
+    @for (cliente of store.clientesFiltrados(); track cliente.id) {
+      <mat-card
+        class="sin-sombra-card cursor-pointer"
+        data-testid="card-cliente"
+        (click)="seleccionarCliente(cliente)"
+      >
+        <mat-card-content>
+          <div class="row justify-content-between align-items-center nowrap">
+            <div>
+              <div class="row gap-4 color-on-surface">
+                <p class="mat-body-1" i18n="cliente">
+                  Cliente #{{ cliente.id }}
+                </p>
+                <p class="mat-body-1"></p>
+              </div>
+              <h3 class="color-on-surface">{{ cliente.nombre }}</h3>
+              <div class="row gap-4 color-on-surface nowrap">
+                <p class="mat-body-1" i18n="direccion">Dirección:</p>
+                <p class="mat-body-1">
+                  {{ cliente.direccion }}
+                </p>
+              </div>
+            </div>
+            <mat-icon class="color-primary"> keyboard_arrow_right </mat-icon>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    }
+  </div>
+</div>
