--- a/UI/apps/web/src/app/productos/registrar-productos/registrar-productos.component.html
+++ b/UI/apps/web/src/app/productos/registrar-productos/registrar-productos.component.html
@@ -39,7 +39,7 @@
             matInput
             data-testid="input-registrar-producto-codigo"
             formControlName="codigo"
-            type="text"
+            type="number"
           />
         </mat-form-field>
         <mat-form-field appearance="outline" class="flex-1">
