"Reestructuración de rutas de vendedores y nuevas funcionalidades: adjuntar evidencia y gestionar rutas asignadas"

--- a/UI/apps/mobile/src/app/vendedores/clientes/clientes.component.html
+++ b/UI/apps/mobile/src/app/vendedores/clientes/clientes.component.html
@@ -1,7 +1,7 @@
 <div class="p-16 column gap-8">
   <app-card-informacion
     [titulo]="titulo"
-    [descripcion]="descripcion"
+    [descripcion]="descripcion()"
   ></app-card-informacion>
   <div class="row justify-content-end">
     <mat-form-field class="width-240" appearance="outline" class="bg-white">
