--- a/UI/libs/design-system/src/lib/styles/clases-colores.scss
+++ b/UI/libs/design-system/src/lib/styles/clases-colores.scss
@@ -65,3 +65,7 @@
 .bg-success-600 {
   background-color: map-get($success, 600);
 }
+
+.bg-success-50 {
+  background-color: map-get($success, 50);
+}
