--- a/UI/libs/design-system/src/lib/styles/configuracion-componentes.scss
+++ b/UI/libs/design-system/src/lib/styles/configuracion-componentes.scss
@@ -51,3 +51,7 @@ input::-webkit-inner-spin-button {
   margin: 0 !important;
   margin-bottom: 8px !important ;
 }
+
+.mat-mdc-form-field-infix {
+  padding-top: 10px !important;
+}
