Implementar análisis de tiendas con modal de observaciones y ajustes en aceptación de archivos

--- a/UI/apps/mobile/src/app/vendedores/adjuntar-evidencia/adjuntar-evidencia.component.html
+++ b/UI/apps/mobile/src/app/vendedores/adjuntar-evidencia/adjuntar-evidencia.component.html
@@ -19,7 +19,7 @@
             data-testid="input-adjuntar-evidencia"
             id="camara"
             capture="environment"
-            accept="image/jpeg, image/png, image/bmp,video/*"
+            accept="video/*"
             (change)="seleccionarArchivo($event)"
           />
         </label>
@@ -31,7 +31,7 @@
             type="file"
             data-testid="input-adjuntar-evidencia"
             id="archivo"
-            accept="image/jpeg, image/png, image/bmp,video/*"
+            accept="video/*"
             (change)="seleccionarArchivo($event)"
           />
         </label>
