--- a/UI/libs/design-system/src/lib/styles/espacios.scss
+++ b/UI/libs/design-system/src/lib/styles/espacios.scss
@@ -82,3 +82,27 @@
 .mt-8 {
   margin-top: 8px;
 }
+
+.pt-4 {
+  padding-top: 4px;
+}
+
+.pb-2 {
+  padding-bottom: 2px;
+}
+
+.px-12 {
+  padding-inline: 12px;
+}
+
+.p-8 {
+  padding: 8px;
+}
+
+.pb-16 {
+  padding-bottom: 16px;
+}
+
+.py-12 {
+  padding-block: 12px;
+}
