Agregar funcionalidad para descargar archivos de análisis de visitas y guardar observaciones con alertas de éxito

--- a/UI/apps/web/src/app/analisis-tiendas/modal-observaciones/modal-observaciones.component.html
+++ b/UI/apps/web/src/app/analisis-tiendas/modal-observaciones/modal-observaciones.component.html
@@ -24,6 +24,7 @@
         i18n="guardar"
         data-testid="boton-analisis-tienda-guardar"
         [disabled]="controlObservaciones.invalid"
+        (click)="guardarObservaciones()"
       >
         Guardar
       </button>
