--- a/UI/apps/web/src/app/analisis-tiendas/analisis-tiendas-container/analisis-tiendas-container.component.html
+++ b/UI/apps/web/src/app/analisis-tiendas/analisis-tiendas-container/analisis-tiendas-container.component.html
@@ -45,6 +45,8 @@
               </div>
               <div
                 class="row gap-4 align-items-center nowrap p-8 bg-grey-100 radius-4 align-items-center flex-1 cursor-pointer"
+                data-testid="analisis-tiendas-descargar-archivo"
+                (click)="descargarArchivo(visita.id)"
               >
                 <mat-icon class="color-primary mat-icon-outlined font-size-16"
                   >insert_drive_file</mat-icon
