internacionalización de web

--- a/UI/apps/mobile/src/app/clientes/entregas-programadas/entregas-programadas.component.html
+++ b/UI/apps/mobile/src/app/clientes/entregas-programadas/entregas-programadas.component.html
@@ -23,7 +23,7 @@
           <div>
             <div class="column gap-4">
               <div class="row align-items-center gap-10">
-                <p class="mat-body-1 color-primary">
+                <p class="mat-body-1 color-primary" i18n>
                   Entrega #{{ entrega.numero }}
                 </p>
               </div>
